build: require prismatic belts

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: ????
+  Changes:
+    - Added Prismatic Belts as a required dependency
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2024-10-27
   Features:
